mlir/parsers/qcis/antlr/generated/qcisParser.cpp

// Generated from qcis.g4 by ANTLR 4.9.2


#include "qcisListener.h"
#include "qcisVisitor.h"

#include "qcisParser.h"


using namespace antlrcpp;
using namespace qcis;
using namespace antlr4;

qcisParser::qcisParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

qcisParser::~qcisParser() {
  delete _interpreter;
}

std::string qcisParser::getGrammarFileName() const {
  return "qcis.g4";
}

const std::vector<std::string>& qcisParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& qcisParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- ProgramContext ------------------------------------------------------------------

qcisParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

qcisParser::QuantumCircuitDeclarationContext* qcisParser::ProgramContext::quantumCircuitDeclaration() {
  return getRuleContext<qcisParser::QuantumCircuitDeclarationContext>(0);
}

std::vector<qcisParser::QuantumStatementContext *> qcisParser::ProgramContext::quantumStatement() {
  return getRuleContexts<qcisParser::QuantumStatementContext>();
}

qcisParser::QuantumStatementContext* qcisParser::ProgramContext::quantumStatement(size_t i) {
  return getRuleContext<qcisParser::QuantumStatementContext>(i);
}

std::vector<qcisParser::MeasurementStatementContext *> qcisParser::ProgramContext::measurementStatement() {
  return getRuleContexts<qcisParser::MeasurementStatementContext>();
}

qcisParser::MeasurementStatementContext* qcisParser::ProgramContext::measurementStatement(size_t i) {
  return getRuleContext<qcisParser::MeasurementStatementContext>(i);
}


size_t qcisParser::ProgramContext::getRuleIndex() const {
  return qcisParser::RuleProgram;
}

void qcisParser::ProgramContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<qcisListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterProgram(this);
}

void qcisParser::ProgramContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<qcisListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitProgram(this);
}


antlrcpp::Any qcisParser::ProgramContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<qcisVisitor*>(visitor))
    return parserVisitor->visitProgram(this);
  else
    return visitor->visitChildren(this);
}

qcisParser::ProgramContext* qcisParser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 0, qcisParser::RuleProgram);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    // Must match qcis.g4: program : (quantumStatement | measurementStatement)* ;
    // Do not parse quantumCircuitDeclaration here; the generated code was out of
    // sync with the grammar and consumed the first gate as a bogus circuit name.
    setState(42);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << qcisParser::T__1)
      | (1ULL << qcisParser::T__2)
      | (1ULL << qcisParser::Identifier))) != 0)) {
      setState(45);
      _errHandler->sync(this);
      switch (_input->LA(1)) {
        case qcisParser::T__1:
        case qcisParser::Identifier: {
          setState(43);
          quantumStatement();
          break;
        }

        case qcisParser::T__2: {
          setState(44);
          measurementStatement();
          break;
        }

      default:
        throw NoViableAltException(this);
      }
      setState(49);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- QuantumCircuitDeclarationContext ------------------------------------------------------------------

qcisParser::QuantumCircuitDeclarationContext::QuantumCircuitDeclarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

qcisParser::CircuitNameContext* qcisParser::QuantumCircuitDeclarationContext::circuitName() {
  return getRuleContext<qcisParser::CircuitNameContext>(0);
}

tree::TerminalNode* qcisParser::QuantumCircuitDeclarationContext::EQUALS() {
  return getToken(qcisParser::EQUALS, 0);
}

tree::TerminalNode* qcisParser::QuantumCircuitDeclarationContext::LPAREN() {
  return getToken(qcisParser::LPAREN, 0);
}

qcisParser::QuantumCountContext* qcisParser::QuantumCircuitDeclarationContext::quantumCount() {
  return getRuleContext<qcisParser::QuantumCountContext>(0);
}

tree::TerminalNode* qcisParser::QuantumCircuitDeclarationContext::RPAREN() {
  return getToken(qcisParser::RPAREN, 0);
}

tree::TerminalNode* qcisParser::QuantumCircuitDeclarationContext::SEMICOLON() {
  return getToken(qcisParser::SEMICOLON, 0);
}

tree::TerminalNode* qcisParser::QuantumCircuitDeclarationContext::COMMA() {
  return getToken(qcisParser::COMMA, 0);
}

qcisParser::ClassicalCountContext* qcisParser::QuantumCircuitDeclarationContext::classicalCount() {
  return getRuleContext<qcisParser::ClassicalCountContext>(0);
}


size_t qcisParser::QuantumCircuitDeclarationContext::getRuleIndex() const {
  return qcisParser::RuleQuantumCircuitDeclaration;
}

void qcisParser::QuantumCircuitDeclarationContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<qcisListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterQuantumCircuitDeclaration(this);
}

void qcisParser::QuantumCircuitDeclarationContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<qcisListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitQuantumCircuitDeclaration(this);
}


antlrcpp::Any qcisParser::QuantumCircuitDeclarationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<qcisVisitor*>(visitor))
    return parserVisitor->visitQuantumCircuitDeclaration(this);
  else
    return visitor->visitChildren(this);
}

qcisParser::QuantumCircuitDeclarationContext* qcisParser::quantumCircuitDeclaration() {
  QuantumCircuitDeclarationContext *_localctx = _tracker.createInstance<QuantumCircuitDeclarationContext>(_ctx, getState());
  enterRule(_localctx, 2, qcisParser::RuleQuantumCircuitDeclaration);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(50);
    circuitName();
    setState(51);
    match(qcisParser::EQUALS);
    setState(52);
    match(qcisParser::T__0);
    setState(53);
    match(qcisParser::LPAREN);
    setState(54);
    quantumCount();
    setState(57);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == qcisParser::COMMA) {
      setState(55);
      match(qcisParser::COMMA);
      setState(56);
      classicalCount();
    }
    setState(59);
    match(qcisParser::RPAREN);
    setState(60);
    match(qcisParser::SEMICOLON);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- CircuitNameContext ------------------------------------------------------------------

qcisParser::CircuitNameContext::CircuitNameContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* qcisParser::CircuitNameContext::Identifier() {
  return getToken(qcisParser::Identifier, 0);
}


size_t qcisParser::CircuitNameContext::getRuleIndex() const {
  return qcisParser::RuleCircuitName;
}

void qcisParser::CircuitNameContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<qcisListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterCircuitName(this);
}

void qcisParser::CircuitNameContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<qcisListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitCircuitName(this);
}


antlrcpp::Any qcisParser::CircuitNameContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<qcisVisitor*>(visitor))
    return parserVisitor->visitCircuitName(this);
  else
    return visitor->visitChildren(this);
}

qcisParser::CircuitNameContext* qcisParser::circuitName() {
  CircuitNameContext *_localctx = _tracker.createInstance<CircuitNameContext>(_ctx, getState());
  enterRule(_localctx, 4, qcisParser::RuleCircuitName);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(62);
    match(qcisParser::Identifier);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- QuantumStatementContext ------------------------------------------------------------------

qcisParser::QuantumStatementContext::QuantumStatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

qcisParser::QuantumGateCallContext* qcisParser::QuantumStatementContext::quantumGateCall() {
  return getRuleContext<qcisParser::QuantumGateCallContext>(0);
}

qcisParser::QuantumBarrierContext* qcisParser::QuantumStatementContext::quantumBarrier() {
  return getRuleContext<qcisParser::QuantumBarrierContext>(0);
}

tree::TerminalNode* qcisParser::QuantumStatementContext::SEMICOLON() {
  return getToken(qcisParser::SEMICOLON, 0);
}


size_t qcisParser::QuantumStatementContext::getRuleIndex() const {
  return qcisParser::RuleQuantumStatement;
}

void qcisParser::QuantumStatementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<qcisListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterQuantumStatement(this);
}

void qcisParser::QuantumStatementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<qcisListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitQuantumStatement(this);
}


antlrcpp::Any qcisParser::QuantumStatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<qcisVisitor*>(visitor))
    return parserVisitor->visitQuantumStatement(this);
  else
    return visitor->visitChildren(this);
}

qcisParser::QuantumStatementContext* qcisParser::quantumStatement() {
  QuantumStatementContext *_localctx = _tracker.createInstance<QuantumStatementContext>(_ctx, getState());
  enterRule(_localctx, 6, qcisParser::RuleQuantumStatement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(68);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case qcisParser::Identifier: {
        enterOuterAlt(_localctx, 1);
        setState(64);
        quantumGateCall();
        break;
      }

      case qcisParser::T__1: {
        enterOuterAlt(_localctx, 2);
        setState(65);
        quantumBarrier();
        setState(66);
        match(qcisParser::SEMICOLON);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- MeasurementStatementContext ------------------------------------------------------------------

qcisParser::MeasurementStatementContext::MeasurementStatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

qcisParser::QuantumMeasurementContext* qcisParser::MeasurementStatementContext::quantumMeasurement() {
  return getRuleContext<qcisParser::QuantumMeasurementContext>(0);
}

tree::TerminalNode* qcisParser::MeasurementStatementContext::SEMICOLON() {
  return getToken(qcisParser::SEMICOLON, 0);
}


size_t qcisParser::MeasurementStatementContext::getRuleIndex() const {
  return qcisParser::RuleMeasurementStatement;
}

void qcisParser::MeasurementStatementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<qcisListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterMeasurementStatement(this);
}

void qcisParser::MeasurementStatementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<qcisListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitMeasurementStatement(this);
}


antlrcpp::Any qcisParser::MeasurementStatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<qcisVisitor*>(visitor))
    return parserVisitor->visitMeasurementStatement(this);
  else
    return visitor->visitChildren(this);
}

qcisParser::MeasurementStatementContext* qcisParser::measurementStatement() {
  MeasurementStatementContext *_localctx = _tracker.createInstance<MeasurementStatementContext>(_ctx, getState());
  enterRule(_localctx, 8, qcisParser::RuleMeasurementStatement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(70);
    quantumMeasurement();
    setState(71);
    match(qcisParser::SEMICOLON);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- QuantumGateCallContext ------------------------------------------------------------------

qcisParser::QuantumGateCallContext::QuantumGateCallContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

qcisParser::QuantumGateNameContext* qcisParser::QuantumGateCallContext::quantumGateName() {
  return getRuleContext<qcisParser::QuantumGateNameContext>(0);
}

std::vector<tree::TerminalNode *> qcisParser::QuantumGateCallContext::QubitId() {
  return getTokens(qcisParser::QubitId);
}

tree::TerminalNode* qcisParser::QuantumGateCallContext::QubitId(size_t i) {
  return getToken(qcisParser::QubitId, i);
}

qcisParser::GateArgumentListContext* qcisParser::QuantumGateCallContext::gateArgumentList() {
  return getRuleContext<qcisParser::GateArgumentListContext>(0);
}


size_t qcisParser::QuantumGateCallContext::getRuleIndex() const {
  return qcisParser::RuleQuantumGateCall;
}

void qcisParser::QuantumGateCallContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<qcisListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterQuantumGateCall(this);
}

void qcisParser::QuantumGateCallContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<qcisListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitQuantumGateCall(this);
}


antlrcpp::Any qcisParser::QuantumGateCallContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<qcisVisitor*>(visitor))
    return parserVisitor->visitQuantumGateCall(this);
  else
    return visitor->visitChildren(this);
}

qcisParser::QuantumGateCallContext* qcisParser::quantumGateCall() {
  QuantumGateCallContext *_localctx = _tracker.createInstance<QuantumGateCallContext>(_ctx, getState());
  enterRule(_localctx, 10, qcisParser::RuleQuantumGateCall);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(73);
    quantumGateName();
    setState(74);
    match(qcisParser::QubitId);
    setState(77);
    _errHandler->sync(this);

    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx)) {
    case 1: {
      setState(75);
      gateArgumentList();
      break;
    }

    case 2: {
      setState(76);
      match(qcisParser::QubitId);
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- QuantumBarrierContext ------------------------------------------------------------------

qcisParser::QuantumBarrierContext::QuantumBarrierContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> qcisParser::QuantumBarrierContext::QubitId() {
  return getTokens(qcisParser::QubitId);
}

tree::TerminalNode* qcisParser::QuantumBarrierContext::QubitId(size_t i) {
  return getToken(qcisParser::QubitId, i);
}


size_t qcisParser::QuantumBarrierContext::getRuleIndex() const {
  return qcisParser::RuleQuantumBarrier;
}

void qcisParser::QuantumBarrierContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<qcisListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterQuantumBarrier(this);
}

void qcisParser::QuantumBarrierContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<qcisListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitQuantumBarrier(this);
}


antlrcpp::Any qcisParser::QuantumBarrierContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<qcisVisitor*>(visitor))
    return parserVisitor->visitQuantumBarrier(this);
  else
    return visitor->visitChildren(this);
}

qcisParser::QuantumBarrierContext* qcisParser::quantumBarrier() {
  QuantumBarrierContext *_localctx = _tracker.createInstance<QuantumBarrierContext>(_ctx, getState());
  enterRule(_localctx, 12, qcisParser::RuleQuantumBarrier);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(79);
    match(qcisParser::T__1);
    setState(81); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(80);
      match(qcisParser::QubitId);
      setState(83); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while (_la == qcisParser::QubitId);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- QuantumGateNameContext ------------------------------------------------------------------

qcisParser::QuantumGateNameContext::QuantumGateNameContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* qcisParser::QuantumGateNameContext::Identifier() {
  return getToken(qcisParser::Identifier, 0);
}


size_t qcisParser::QuantumGateNameContext::getRuleIndex() const {
  return qcisParser::RuleQuantumGateName;
}

void qcisParser::QuantumGateNameContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<qcisListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterQuantumGateName(this);
}

void qcisParser::QuantumGateNameContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<qcisListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitQuantumGateName(this);
}


antlrcpp::Any qcisParser::QuantumGateNameContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<qcisVisitor*>(visitor))
    return parserVisitor->visitQuantumGateName(this);
  else
    return visitor->visitChildren(this);
}

qcisParser::QuantumGateNameContext* qcisParser::quantumGateName() {
  QuantumGateNameContext *_localctx = _tracker.createInstance<QuantumGateNameContext>(_ctx, getState());
  enterRule(_localctx, 14, qcisParser::RuleQuantumGateName);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(85);
    match(qcisParser::Identifier);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- QuantumMeasurementContext ------------------------------------------------------------------

qcisParser::QuantumMeasurementContext::QuantumMeasurementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

qcisParser::MeasurementArgumentListContext* qcisParser::QuantumMeasurementContext::measurementArgumentList() {
  return getRuleContext<qcisParser::MeasurementArgumentListContext>(0);
}


size_t qcisParser::QuantumMeasurementContext::getRuleIndex() const {
  return qcisParser::RuleQuantumMeasurement;
}

void qcisParser::QuantumMeasurementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<qcisListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterQuantumMeasurement(this);
}

void qcisParser::QuantumMeasurementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<qcisListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitQuantumMeasurement(this);
}


antlrcpp::Any qcisParser::QuantumMeasurementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<qcisVisitor*>(visitor))
    return parserVisitor->visitQuantumMeasurement(this);
  else
    return visitor->visitChildren(this);
}

qcisParser::QuantumMeasurementContext* qcisParser::quantumMeasurement() {
  QuantumMeasurementContext *_localctx = _tracker.createInstance<QuantumMeasurementContext>(_ctx, getState());
  enterRule(_localctx, 16, qcisParser::RuleQuantumMeasurement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(87);
    match(qcisParser::T__2);
    setState(88);
    measurementArgumentList();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- GateArgumentListContext ------------------------------------------------------------------

qcisParser::GateArgumentListContext::GateArgumentListContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<qcisParser::ExpressionContext *> qcisParser::GateArgumentListContext::expression() {
  return getRuleContexts<qcisParser::ExpressionContext>();
}

qcisParser::ExpressionContext* qcisParser::GateArgumentListContext::expression(size_t i) {
  return getRuleContext<qcisParser::ExpressionContext>(i);
}

std::vector<tree::TerminalNode *> qcisParser::GateArgumentListContext::COMMA() {
  return getTokens(qcisParser::COMMA);
}

tree::TerminalNode* qcisParser::GateArgumentListContext::COMMA(size_t i) {
  return getToken(qcisParser::COMMA, i);
}


size_t qcisParser::GateArgumentListContext::getRuleIndex() const {
  return qcisParser::RuleGateArgumentList;
}

void qcisParser::GateArgumentListContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<qcisListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterGateArgumentList(this);
}

void qcisParser::GateArgumentListContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<qcisListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitGateArgumentList(this);
}


antlrcpp::Any qcisParser::GateArgumentListContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<qcisVisitor*>(visitor))
    return parserVisitor->visitGateArgumentList(this);
  else
    return visitor->visitChildren(this);
}

qcisParser::GateArgumentListContext* qcisParser::gateArgumentList() {
  GateArgumentListContext *_localctx = _tracker.createInstance<GateArgumentListContext>(_ctx, getState());
  enterRule(_localctx, 18, qcisParser::RuleGateArgumentList);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(95);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 6, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        setState(90);
        expression();
        setState(91);
        match(qcisParser::COMMA); 
      }
      setState(97);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 6, _ctx);
    }
    setState(98);
    expression();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- MeasurementArgumentListContext ------------------------------------------------------------------

qcisParser::MeasurementArgumentListContext::MeasurementArgumentListContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* qcisParser::MeasurementArgumentListContext::QubitId() {
  return getToken(qcisParser::QubitId, 0);
}


size_t qcisParser::MeasurementArgumentListContext::getRuleIndex() const {
  return qcisParser::RuleMeasurementArgumentList;
}

void qcisParser::MeasurementArgumentListContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<qcisListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterMeasurementArgumentList(this);
}

void qcisParser::MeasurementArgumentListContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<qcisListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitMeasurementArgumentList(this);
}


antlrcpp::Any qcisParser::MeasurementArgumentListContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<qcisVisitor*>(visitor))
    return parserVisitor->visitMeasurementArgumentList(this);
  else
    return visitor->visitChildren(this);
}

qcisParser::MeasurementArgumentListContext* qcisParser::measurementArgumentList() {
  MeasurementArgumentListContext *_localctx = _tracker.createInstance<MeasurementArgumentListContext>(_ctx, getState());
  enterRule(_localctx, 20, qcisParser::RuleMeasurementArgumentList);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(100);
    match(qcisParser::QubitId);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- GateArgumentContext ------------------------------------------------------------------

qcisParser::GateArgumentContext::GateArgumentContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t qcisParser::GateArgumentContext::getRuleIndex() const {
  return qcisParser::RuleGateArgument;
}

void qcisParser::GateArgumentContext::copyFrom(GateArgumentContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- ExpressionArgumentContext ------------------------------------------------------------------

qcisParser::ExpressionContext* qcisParser::ExpressionArgumentContext::expression() {
  return getRuleContext<qcisParser::ExpressionContext>(0);
}

qcisParser::ExpressionArgumentContext::ExpressionArgumentContext(GateArgumentContext *ctx) { copyFrom(ctx); }

void qcisParser::ExpressionArgumentContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<qcisListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterExpressionArgument(this);
}
void qcisParser::ExpressionArgumentContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<qcisListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitExpressionArgument(this);
}

antlrcpp::Any qcisParser::ExpressionArgumentContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<qcisVisitor*>(visitor))
    return parserVisitor->visitExpressionArgument(this);
  else
    return visitor->visitChildren(this);
}
//----------------- IntegerGateArgumentContext ------------------------------------------------------------------

tree::TerminalNode* qcisParser::IntegerGateArgumentContext::Integer() {
  return getToken(qcisParser::Integer, 0);
}
